# sbe-gradle-plugin

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  build.gradle  gradle.properties  settings.gradle
src/main/groovy/com/github/vontikov/: Const.groovy  SbeGeneratorPlugin.groovy  SbeGeneratorPluginExtension.groovy  Util.groovy
src/main/groovy/vontikov/: Const.groovy  SbeGeneratorPlugin.groovy  SbeGeneratorPluginExtension.groovy  SbeValidatorTask.groovy  Util.groovy
src/main/resources/cmake/: CMakeLists.txt  Config.cmake.in
src/test/groovy/com/github/vontikov/: MiscTest.groovy  PluginTest.groovy  UtilTest.groovy
src/test/groovy/vontikov/: IntegrationTest.groovy  PluginTest.groovy  UtilTest.groovy
src/test/resources/projects/generator/: build.gradle  settings.gradle
src/test/resources/projects/generator/src/main/resources/xml/: file1.xml  file2.xml
src/test/resources/projects/validator/: build.gradle
src/test/resources/projects/validator/src/main/resources/xml/: file1.xml
src/test/resources/xml/util_all/: file2.xml
